--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "prepare": "panda codegen",
     "dev": "astro dev",
     "start": "astro dev",
     "ssg": "astro build",
@@ -13,20 +14,19 @@
     "git": "git add . && git commit -a -m $M"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.19.7",
     "@astrojs/react": "^2.2.1",
     "astro": "^2.7.4",
-    "daisyui": "^3.2.1",
     "dayjs": "^1.11.9",
+    "framer-motion": "^10.12.18",
     "lodash-es": "^4.17.21",
     "markdown-it": "^13.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "sass": "^1.63.6",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "^3.3.2"
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
+    "@pandacss/dev": "^0.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
@@ -35,10 +35,14 @@
     "@types/node": "^20.3.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/parser": "^6.0.0",
+    "astro-eslint-parser": "^0.14.0",
     "autoprefixer": "^10.4.14",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.4.8",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "fs-extra": "^11.1.1",
     "jest": "^29.6.0",
     "jest-environment-jsdom": "^29.6.0",
