add:vue_and_svelte

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@/*": ["./src/*"],
       "@@/*": ["./*"]
     },
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "importsNotUsedAsValues": "error"
   },
   "include": [
     "**/*.ts",
