--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
   "dependencies": {
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/react": "^2.2.1",
+    "@astrojs/svelte": "^3.1.0",
+    "@astrojs/vue": "^2.2.1",
     "astro": "^2.7.4",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.18",
     "lodash-es": "^4.17.21",
     "markdown-it": "^13.0.1",
+    "oh-vue-icons": "1.0.0-rc3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "npm:@lorenzobloedow/react-icons@^1.0.0",
+    "svelte": "^4.1.1",
+    "svelte-icons": "^2.1.0",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.6.0",
@@ -48,6 +54,7 @@
     "jest-environment-jsdom": "^29.6.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.24",
+    "sass": "^1.64.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2"
   }
